test/error/type/err3.rzy
Weekday = Enum
  Monday;
  Tuesday;
  Wednesday;
  Thursday;
  Friday;
  Saturday;
  Sunday;
end

Err3 = Elementary
  foo : slot( x: Weekday )
    z : Weekday = x + Weekday.Tuesday;
  end
end

